# AnalyticsEval

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
docs/: architecture.md  development.md  metrics.md
src/analytics_eval/: __init__.py  pytest_plugin.py
src/analytics_eval/agents/: __init__.py  base.py  llm_sql_agent.py
src/analytics_eval/datasets/: __init__.py
src/analytics_eval/datasets/adapters/: __init__.py  base.py  bird.py  spider2_snow.py
src/analytics_eval/datasets/generation/: __init__.py
src/analytics_eval/execution/: __init__.py  base.py  snowflake_executor.py  sqlite_executor.py
src/analytics_eval/integrations/: __init__.py
src/analytics_eval/metrics/: __init__.py  base.py
src/analytics_eval/metrics/insight/: __init__.py
src/analytics_eval/metrics/model/: __init__.py
src/analytics_eval/metrics/result/: __init__.py  grain_correctness.py  result_accuracy.py
src/analytics_eval/metrics/sql/: __init__.py  execution_accuracy.py  schema_adherence.py
src/analytics_eval/metrics/viz/: __init__.py
src/analytics_eval/pipeline/: __init__.py  base.py
src/analytics_eval/test_case/: __init__.py  case.py
tests/: conftest.py  test_metrics_base.py  test_pytest_plugin.py  test_test_case.py
tests/agents/: test_agent_interface.py  test_llm_sql_agent.py
tests/datasets/adapters/: test_bird_adapter.py
tests/execution/: test_sqlite_executor.py
tests/metrics/result/: test_grain_correctness.py  test_result_accuracy.py
tests/metrics/sql/: test_execution_accuracy.py  test_schema_adherence.py
tests/pipeline/: test_pipeline.py  test_pipeline_sql.py
